# etrade-pipeline

./: .gitignore  README.md  init-scaffold.sh
artifacts/: bench_bs1.stdout.txt  bench_bs16.stdout.txt  bench_bs32.stdout.txt  bench_bs64.stdout.txt  bench_bs8.stdout.txt  receiver_bs1.stderr.txt  receiver_bs16.stderr.txt  receiver_bs32.stderr.txt  receiver_bs64.stderr.txt  receiver_bs8.stderr.txt  recevier_bs16.stdout.txt  results.csv
cpp/: CMakeLists.txt  README.md
cpp/include/: book_registry.h  event.h  metrics.h  order_book.h  order_manager.h  risk.h  spsc_queue.h
cpp/src/: engine.cpp  execution_gateway.cpp  metrics.cpp  order_book.cpp  order_manager.cpp  replay_sender.cpp  risk.cpp  udp_bench_sender.cpp  udp_latency_server.cpp  udp_receiver.cpp
data/: book_AAPL.json  book_MSFT.json  events.jsonl
docs/: dev_notes.md
infra/monitoring/: docker-compose.yml
infra/monitoring/engine/: Dockerfile
infra/monitoring/grafana/dashboards/: ull_engine_overview.json
infra/monitoring/grafana/provisioning/dashboards/: dashboard.yml
infra/monitoring/grafana/provisioning/datasources/: datasources.yml
infra/monitoring/prometheus/: prometheus.yml
python/app/: main.py
python/scripts/: auto_benchmark.py  benchmark_sender.py  compute_latency_stats.py  order_client.py  send_udp.py  test_replay.py
scripts/: dev-setup.sh  temp_push_data.py
